// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render 1`] = `
<div>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
    id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
  />
</div>
`;

exports[`<Radio /> should render checked 1`] = `
<div>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
    id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    Radio 1
  </label>
</div>
`;

exports[`<Radio /> should render disabled 1`] = `
<div>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
    id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    Radio 1
  </label>
</div>
`;

exports[`<Radio /> should render with a label 1`] = `
<div>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      id="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-radio--2e732f05-f466-4fba-acb5-2f3be58daf75"
    id="mdc-radio-label--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    Radio 1
  </label>
</div>
`;
